corrected basket update endpoint
