# docs/swagger.json
@@ -180,7 +180,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/utils.Basket"
+                            "$ref": "#/definitions/api.BasketRequest"
                         }
                     }
                 ],
@@ -390,6 +390,17 @@
                 },
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "api.BasketRequest": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utils.OrderItem"
+                    }
                 }
             }
         },
